--- a/mtl_seg_dep.ipynb
+++ b/mtl_seg_dep.ipynb
@@ -1864,8 +1864,9 @@
     "\n",
     "#visualize arsitektur di tensorboard\n",
     "summary(model,input_size=X_in[0].size())\n",
-    "writer.add_graph(model, X_in) #visualisasi model harus dengan 1 GPU saja.\n",
-    "# writer.close()"
+    "if torch.cuda.device_count() == 1:\n",
+    "    writer.add_graph(model, X_in) #visualisasi model harus dengan 1 GPU saja.\n",
+    "    # writer.close()"
    ]
   },
   {
@@ -2372,7 +2373,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
